# crypto-pipeline

./: .env.example  .env_encoded  .gitignore  Dockerfile.dbt  Dockerfile.flink  Dockerfile.kestra  Dockerfile.producer  README - 副本.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.sh
.devcontainer/: devcontainer.json
crypto_dbt/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
crypto_dbt/models/gold/: gold_alerts.sql  gold_correlation.sql  gold_ohlc.sql  gold_ohlc_interval.sql  gold_vwap_analysis.sql
crypto_dbt/models/silver/: schema.yml  silver_prices.sql
crypto_dbt/models/staging/: sources.yaml  stg_bronze_raw.sql
flows/: dbt_github_pipeline.yaml  setup_bigquery.yaml
setup/: bigquery_setup.py
src/consumers/: check_msg.py  consumer.py
src/job/: crypto_alert.py  crypto_ingest.py
src/producers/: producer.py
terraform/: main.tf  variables.tf
